--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_blue_plus: 1.32.12
+  permission_handler: ^11.0.0  # หรือเวอร์ชั่นล่าสุด
+  flutter_blue_plus: ^1.30.0   # หรือเวอร์ชั่นที่คุณใช้อยู่
 
 
 dev_dependencies:
